src/test/ui/macros/issue-68060.stderr
error[E0658]: `#[target_feature(..)]` can only be applied to `unsafe` functions
  --> $DIR/issue-68060.rs:6:13
   |
LL |             #[target_feature(enable = "")]
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
...
LL |             |_| (),
   |             ------ not an `unsafe` function
   |
   = note: see issue #69098 <https://github.com/rust-lang/rust/issues/69098> for more information
   = help: add `#![feature(target_feature_11)]` to the crate attributes to enable

error: the feature named `` is not valid for this target
  --> $DIR/issue-68060.rs:6:30
   |
LL |             #[target_feature(enable = "")]
   |                              ^^^^^^^^^^^ `` is not valid for this target

error[E0737]: `#[track_caller]` requires Rust ABI
  --> $DIR/issue-68060.rs:9:13
   |
LL |             #[track_caller]
   |             ^^^^^^^^^^^^^^^

error: aborting due to 3 previous errors

Some errors have detailed explanations: E0658, E0737.
For more information about an error, try `rustc --explain E0658`.
